<resources>
    <string name="app_name">ForecastMVVM</string>
    <string name="feels_like">Feels like</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visiblity</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>

    <!--
        "North",
        "North North East",
        "North East",
        "East North East",
        "East",
        "East South East",
        "South East",
        "South South East",
        "South",
        "South South West",
        "South West",
        "West South West",
        "West",
        "West North West",
        "North West",
        "North North West")
    -->

    <string name="direction_north">North</string>
    <string name="direction_north_north_east">North North East</string>
    <string name="direction_north_east">North East</string>
    <string name="direction_east_north_east">East North East</string>
    <string name="direction_east">East</string>
    <string name="direction_east_south_east">East South East</string>
    <string name="direction_south_east">South East</string>
    <string name="direction_south_south_east">South South East</string>
    <string name="direction_south">South</string>
    <string name="direction_south_south_west">South South West</string>
    <string name="direction_south_west">South West</string>
    <string name="direction_west_south_west">West South West</string>
    <string name="direction_west">West</string>
    <string name="direction_west_north_west">West North West</string>
    <string name="direction_north_west">North West</string>
    <string name="direction_north_north_west">North North West</string>

    <string name="pref_use_device_location_title">Use device location</string>
    <string name="pref_use_device_location_summary">Allow the app to get your location</string>
    <string name="pref_custom_location_title">Location</string>
    <string name="pref_custom_location_summary">The location for which the weather is displayed</string>
    <string name="pref_unit_system_title">Unit system</string>
    <string name="pref_unit_system_summary">Select your preferred unit system</string>
    <string name="weather_location_title">Settings</string>


</resources>