<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
    android:title="@string/weather_location_title">
        <SwitchPreference
            android:key="USE_DEVICE_LOCATION"
        android:title="@string/pref_use_device_location_title"
        android:summary="@string/pref_use_device_location_summary"
            android:defaultValue="true"
            android:disableDependentsState="true"/>

        <EditTextPreference
            android:key="CUSTOM_LOCATION"
        android:title="@string/pref_custom_location_title"
        android:summary="@string/pref_custom_location_summary"
            android:defaultValue="Krasnoyarsk"
            android:dependency="USE_DEVICE_LOCATION"/>
    </PreferenceCategory>

    <PreferenceCategory
    android:title="@string/pref_unit_system_title">
        <ListPreference
            android:key="UNIT_SYSTEM"
        android:title="@string/pref_unit_system_summary"
            android:defaultValue="METRIC"
            android:entries="@array/unitSystemEntries"
            android:entryValues="@array/unitSystemValues"/>
    </PreferenceCategory>
</PreferenceScreen>